--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-16T16:21:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -54,11 +54,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kDQdTd/TojTe
-								5RskwegNJw==
+								MvjnTxCGKox0
+								P5Oe7v+ylA==
 								</data>
 								<key>Size</key>
-								<integer>361514</integer>
+								<integer>519311</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -130,6 +130,16 @@
 								<key>Size</key>
 								<integer>61504</integer>
 							</dict>
+							<key>files/stacks-image-53ce784-350x450.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xVNAudMUjLd/
+								gD5Vs846yg==
+								</data>
+								<key>Size</key>
+								<integer>251987</integer>
+							</dict>
 							<key>files/stacks-image-5cba074-350x450.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -180,6 +190,16 @@
 								<key>Size</key>
 								<integer>316465</integer>
 							</dict>
+							<key>files/stacks-image-d4c72a8-350x450.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xVNAudMUjLd/
+								gD5Vs846yg==
+								</data>
+								<key>Size</key>
+								<integer>251987</integer>
+							</dict>
 							<key>files/stacks-image-e1d92c9.png</key>
 							<dict>
 								<key>Digest</key>
@@ -224,31 +244,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DeQBySi9o2RD
-								cKE2Bt7adw==
+								7TT7XM35R3XG
+								wKuHJZfZLQ==
 								</data>
 								<key>Size</key>
-								<integer>158199</integer>
+								<integer>165746</integer>
 							</dict>
 							<key>files/stacks_page_page77.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TX1L0bZu4ujb
-								FGPmkuvOJA==
+								8oEWzcACMvug
+								ObDh8xgozA==
 								</data>
 								<key>Size</key>
-								<integer>25052</integer>
+								<integer>25234</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wCfDQrKsUv59
-								3OBkqSxqUg==
+								MXPxlWCHSVDN
+								Ypv2MSUJIg==
 								</data>
 								<key>Size</key>
-								<integer>79972</integer>
+								<integer>86089</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
