--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-16T00:47:05Z</date>
+						<date>2019-11-16T16:21:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -210,6 +210,16 @@
 								<key>Size</key>
 								<integer>1031825</integer>
 							</dict>
+							<key>files/stacks-image-53ce784-350x450.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xVNAudMUjLd/
+								gD5Vs846yg==
+								</data>
+								<key>Size</key>
+								<integer>251987</integer>
+							</dict>
 							<key>files/stacks-image-5cba074-350x450.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -329,6 +339,16 @@
 								</data>
 								<key>Size</key>
 								<integer>27178</integer>
+							</dict>
+							<key>files/stacks-image-d4c72a8-350x450.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xVNAudMUjLd/
+								gD5Vs846yg==
+								</data>
+								<key>Size</key>
+								<integer>251987</integer>
 							</dict>
 							<key>files/stacks-image-d77b357.jpg</key>
 							<dict>
@@ -454,31 +474,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								I38nX829KiKD
-								ZKpuwFtenw==
+								EDa8jaYrnq/n
+								Bs3zcjOgbQ==
 								</data>
 								<key>Size</key>
-								<integer>250129</integer>
+								<integer>257690</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								W5+bzzLnJT8I
-								LCVejhmuXA==
+								v3vftXjub4Ev
+								5eA06PYsNQ==
 								</data>
 								<key>Size</key>
-								<integer>28146</integer>
+								<integer>28328</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								smDrYSetHngd
-								KX6xlUmudA==
+								kp6/z5z9w7nv
+								eImgzRrF7Q==
 								</data>
 								<key>Size</key>
-								<integer>171295</integer>
+								<integer>177412</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
