--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-16T17:36:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -54,11 +54,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kDQdTd/TojTe
-								5RskwegNJw==
+								MvjnTxCGKox0
+								P5Oe7v+ylA==
 								</data>
 								<key>Size</key>
-								<integer>361514</integer>
+								<integer>519311</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3iSF0vTErLIs
-								demJtWrPsQ==
+								AKwHIR+HeYDW
+								YwxpPMH7IA==
 								</data>
 								<key>Size</key>
-								<integer>146173</integer>
+								<integer>157627</integer>
 							</dict>
 							<key>files/stacks_page_page75.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CkN4iVfULxNp
-								9FTU9ImzKQ==
+								/tJDmW4C2Oyb
+								O8eytunVNw==
 								</data>
 								<key>Size</key>
-								<integer>65854</integer>
+								<integer>73755</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
