--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-16T16:21:10Z</date>
+						<date>2019-11-16T17:36:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -494,11 +494,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kp6/z5z9w7nv
-								eImgzRrF7Q==
+								mwpwi+gmtFsb
+								Be+xbv/qjQ==
 								</data>
 								<key>Size</key>
-								<integer>177412</integer>
+								<integer>177418</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
