--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -11310,7 +11310,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-16T17:36:23Z</date>
+						<date>2019-11-18T13:59:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11769,11 +11769,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mwpwi+gmtFsb
-								Be+xbv/qjQ==
+								scomSKHVyskH
+								3TONoJ1eOw==
 								</data>
 								<key>Size</key>
-								<integer>177418</integer>
+								<integer>177836</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14656,7 +14656,7 @@
 					<key>page79 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-05T16:32:34Z</date>
+						<date>2019-11-18T13:59:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14675,11 +14675,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kDQdTd/TojTe
-								5RskwegNJw==
+								MvjnTxCGKox0
+								P5Oe7v+ylA==
 								</data>
 								<key>Size</key>
-								<integer>361514</integer>
+								<integer>519311</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -14965,11 +14965,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								efeJZvE09t1G
-								L3irKYiXhA==
+								7SuhNYW9aVTU
+								D5F/RWnNqA==
 								</data>
 								<key>Size</key>
-								<integer>121679</integer>
+								<integer>122054</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16664,7 +16664,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-16T17:36:23Z</date>
+						<date>2019-11-18T13:59:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17743,11 +17743,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4LMng5ijyt+7
-								4KWjQaYITA==
+								1X1nFmY32f1V
+								8r0obRFKNg==
 								</data>
 								<key>Size</key>
-								<integer>3830</integer>
+								<integer>3793</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -17903,8 +17903,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwcA1
-				jnyfSYAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwcFt
+				og0JwIAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17914,14 +17914,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBwDWOfJ/PgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBwW2iDQpngA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcHANY58n+iADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcHBbaINCpqADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17930,8 +17930,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcHANY58
-				oAKADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcHBbaIN
+				CsSADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17940,7 +17940,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcHANY58oBuADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcHBbaINCt2ADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
