--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-16T17:36:23Z</date>
+						<date>2019-11-18T13:59:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -494,11 +494,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mwpwi+gmtFsb
-								Be+xbv/qjQ==
+								scomSKHVyskH
+								3TONoJ1eOw==
 								</data>
 								<key>Size</key>
-								<integer>177418</integer>
+								<integer>177836</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
