--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -18,10 +18,10 @@
 	<key>projectViewWidth</key>
 	<real>228</real>
 	<key>selectedInspectorTab</key>
-	<string>pageSettings</string>
+	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page22</string>
+		<string>page0</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
